--- a/Market/frm_PagoQR.resx
+++ b/Market/frm_PagoQR.resx
@@ -316,4 +316,7 @@
         FFFFABRRRQAUUUUAf//Z
 </value>
   </data>
+  <metadata name="timerEstado.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
